# Asset-Monitor2

./: .dockerignore  .gitignore  BUG_BOUNTY_AUTOMATION_RESEARCH.md  Dockerfile  FIXES_SUMMARY.md  FRONTEND_UI_MASTER_PLAN.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  SECURITY_FIXES_SUMMARY.md  SESSION_COMPLETE.md  SESSION_PLAN.md  SIMPLIFIED_DASHBOARD_PLAN.md  TEST_REPORT.md  UI_TEST_PLAN.md  WORK_INSTRUCTIONS_ASSET_MANAGEMENT.md  WORK_INSTRUCTIONS_PROJECTS_UI.md  WORK_INSTRUCTIONS_SPRINT1.md  WORK_INSTRUCTIONS_SPRINT2.md  config.yaml.example  cookie.txt  create.json  docker-compose.yml  instructions.md  login.json  migrate_db.py  pyproject.toml  requirements.txt  session.json  start.ps1  start.sh  test_api_fixes.py  verify_login.py
docs/: PUBLIC_REPO_GUIDE.md  SECURITY_GUIDE.md
src/: cli.py  config.py  database.py  scheduler.py
src/detectors/: __init__.py
src/enumeration/: cloud_assets.py  ct_logs.py  dns_bruteforce.py  dns_records.py  dorking.py  js_analysis.py  manager.py  passive_dns.py  reverse_ip.py  ssl_san.py  wayback.py  zone_transfer.py
src/github/: __init__.py  client.py  monitor.py  secret_scanner.py
src/monitoring/: broken_links.py  crawler.py  js_analyzer.py  security_files.py  website_scanner.py
src/scanning/: api_discovery.py  dir_bruteforce.py  manager.py  port_scanner.py
src/verification/: classifier.py  dnssec.py  email_security.py  fingerprinter.py  http_prober.py  manager.py  (+1 more)
tests/: test_dns_security.py  test_logging.py  test_new_features.py  test_sprint2_integration.py  test_ssl_config.py
wordlists/: subdomains-5000.txt
(+4 files in other folders)
